# nexova-corporate-assistant

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  seed.py
agents/: domain_agents.py  orchestrator.py  synthesis.py
api/: main.py
api/routes/: auth.py  employees.py  ingest.py  query.py
auth/: dependencies.py  jwt_handler.py  password.py
database/: crud.py  db.py  models.py
rag/: embedder.py  ingestor.py  query_processor.py  reranker.py  retriever.py
vectordb/: chroma_client.py
