[project]
name = "nexora-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"aiosqlite==0.20.0",
	"bcrypt==4.0.1",
	"chromadb==0.5.20",
	"fastapi==0.115.6",
	"httpx==0.28.1",
	"passlib[bcrypt]==1.7.4",
	"pdfplumber==0.11.5",
	"pymupdf==1.25.1",
	"rank_bm25==0.2.2",
	"pydantic==2.7.1",
	"pydantic-settings==2.7.1",
	"numpy==2.1.3",
	"sentence-transformers==3.3.1",
	"python-jose[cryptography]==3.3.0",
	"python-multipart==0.0.20",
	"sqlalchemy==2.0.36",
	"uvicorn[standard]==0.34.0",
]
